fixed footer issue
Footer width was set to 100%, which makes the width of the page greater than 100% (for some reason?). It's now set to 98%, so there is no longer a horizontal scroll bar.

--- a/style.css
+++ b/style.css
@@ -197,5 +197,5 @@ section {
 	text-align: left;
 	padding: 20px;
 	margin-top: 40px;
-	width: 100%;
+	width: 98%;
 }
